...
    <string name="contacts_phone_hint">Enter your Phone Number</string>
    <string name="contacts_save">Save</string>
    <string name="contacts_delete">Delete</string>
    <string name="contacts_import">Import</string>
    <string name="contacts_save_to_app">Save To App</string>
    <string name="start_button_start">Start</string>
    <string name="start_button_stop">Stop</string>
    <string name="set_time_button">Set Time</string>
    <string name="set_time_button_start_recording">Start Recording</string>
    <string name="set_time_button_recording">Recording</string>
    <string name="notification_content_first">Time left: %1$s | Expand for options</string>
    <string name="notification_stop">Stop Timer</string>
    <string name="notification_title"><xliff:g id="appName">Soteria</xliff:g> Safety Notification</string>
    <string name="eula_accept">Accept</string>
    <string name="eula_decline">Decline</string>
...
